--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -81,8 +81,6 @@
             margin: 30px 0;
         }
 
-
-
         /* allpage */
     </style>
 </head>
@@ -164,6 +162,7 @@
     </div>
 
     <div class="main">
+
         <div class="container-fulid">
             <div class="banner">
                 <div class="banner-mask">
@@ -173,10 +172,6 @@
                         妖<br />
                         去<br />
                     </div>
-                    <div class="banner-text position-absolute translate-middle position-left">
-                        <span class="banner-text-focus">妖來妖去製作團隊</span><br />
-                        團隊繪製出許多精緻的妖怪圖片，並製作相關產品，如：拼圖、貼圖、明信片...
-                    </div>
                 </div>
             </div>
         </div>
@@ -184,134 +179,152 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-11 content-title">
-                    主打商品
+                    我們是誰
                 </div>
                 <div class="col-sm-8 col-10">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="resource/carousel/1.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/2.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
+                    大家好，我們是妖來妖去製作團隊！<br /><br />
+
+                    團隊成員透過蒐集台灣妖怪文獻，由文獻發現、創作，繪製出許多精緻且具有文化意涵的妖怪圖片。<br /><br />
+
+                    專題包含了此網站及相關產品，如：拼圖、貼圖、明信片...
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-11 content-title">
-                    副商品
-                </div>
-                <div class="col-sm-5 col-10">
-                    <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="resource/carousel/4.jpg" class="d-block w-100" alt="...">
+
+            <div class="container-lg">
+                <div class="row justify-content-center">
+                    <div class="col-11 content-title">
+                        關於專題
+                    </div>
+                    <div class="col-sm-8 col-10">
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="resource/carousel/1.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/2.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/3.jpg" class="d-block w-100" alt="...">
+                                </div>
                             </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/5.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
-                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
                     </div>
                 </div>
 
-                <div class="col-sm-5 col-10">
-                    <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="resource/carousel/7.jpg" class="d-block w-100" alt="...">
+                <div class="row justify-content-center">
+                    <div class="col-11 content-title">
+                        我們的商品
+                    </div>
+                    <div class="col-sm-5 col-10">
+                        <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="resource/carousel/4.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/5.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/6.jpg" class="d-block w-100" alt="...">
+                                </div>
                             </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/8.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="resource/carousel/9.jpg" class="d-block w-100" alt="...">
-                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls3"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                    </div>
+
+                    <div class="col-sm-5 col-10">
+                        <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="resource/carousel/7.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/8.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="resource/carousel/9.jpg" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleControls3" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <div class="footer">
+                <div class="container-fluid">
+                    <div class="footer-text">
+                        Copyright &copy;2022 妖來妖去製作團隊 版權所有.
                     </div>
                 </div>
             </div>
+
         </div>
 
 
-        <div class="footer">
-            <div class="container-fluid">
-                <div class="footer-text">
-                    Copyright &copy;2022 妖來妖去製作團隊 版權所有.
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
 
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+            integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
 
-
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-
-    <script src="resource/js/allpage.js"></script>
-    <script>
-        $(document).ready(function () {
-            let bannerInt = getRandomInt(9);
-            setBanner(bannerInt);
-        });
-
-
-
-        function getRandomInt(max) {
-            return Math.floor(Math.random() * max);
-        }
-
-        function setBanner(bannerInt) {
-            $('.banner').css('background-image', 'url(resource/banner/' + bannerInt + '.jpg)')
-        };
+        <script src="resource/js/allpage.js"></script>
+        <script>
+            $(document).ready(function () {
+                let bannerInt = getRandomInt(9);
+                setBanner(bannerInt);
+            });
 
 
 
-    </script>
+            function getRandomInt(max) {
+                return Math.floor(Math.random() * max);
+            }
+
+            function setBanner(bannerInt) {
+                $('.banner').css('background-image', 'url(resource/banner/' + bannerInt + '.jpg)')
+            };
+
+
+
+        </script>
 </body>
 
 </html>
