--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -105,6 +105,8 @@
                                         首頁
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-end">
+                                        <li><a href="index.html"><button class="dropdown-item"
+                                                    type="button">首頁</button></a></li>
                                         <li><a href="page1.html"><button class="dropdown-item"
                                                     type="button">建築工藝人-謝明標先生</button></a></li>
                                         <li><a href="page2.html"><button class="dropdown-item"
