--- a/newsletter/page2.html
+++ b/newsletter/page2.html
@@ -10,14 +10,20 @@
     <link rel="stylesheet" href="resource/css/allpage.css">
     <link rel="stylesheet" href="resource/css/banner.css">
     <style>
-        
+        .content-text {
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        .card {
+            border: 0;
+        }
     </style>
 </head>
 
 <body>
     <div class="contanier-fulid">
         <div class="banner">
-
             <div class="header">
                 <div class="normalheader">
                     <nav class="navbar navbar-expand-lg navbar-dark bg-light">
@@ -39,6 +45,8 @@
                                             首頁
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end">
+                                            <li><a href="index.html"><button class="dropdown-item"
+                                                        type="button">首頁</button></a></li>
                                             <li><a href="page1.html"><button class="dropdown-item"
                                                         type="button">建築工藝人-謝明標先生</button></a></li>
                                             <li><a href="page2.html"><button class="dropdown-item"
@@ -102,8 +110,173 @@
         </div>
     </div>
 
+    <div class="container-lg content-text">
+        　　現代人的養生趨勢使營養密度高的酪梨大受寵愛。<br /><br />
+        　　酪梨的產期為每年6月至隔年2月，但嬌貴的它不但容易感染病蟲害、栽培相對不易，面積增長也有限，使酪梨成為高單價的蔬果。
+    </div>
+
+    <div style="background-color: #EEE; width: 100%;">
+        <div class="container-lg content-text">
+            <div class="row">
+                <div class="col-sm-9 col-12"
+                    style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                    <div style="width: 100%; font-size: 25px; font-weight:bolder;">酪梨王子-林育洲先生</div><br />
+                    　　今年45歲的林育洲先生是個土生土長的車籠埔囝仔，外表憨厚英挺的他以機械為主業，因父母皆為全職農夫，基於對山林田園的熱愛，他一直把農作當成自己的興趣，也希望能傳承給下一代。
+                </div>
+                <div class="col-sm-3 col-12"
+                    style="display: flex; flex-direction:columN !important; justify-content: center;">
+                    <img src="resource/1.jpg" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-3 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/2.jpg" class="img-fluid">
+            </div>
+            <div class="col-sm-9 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　雖然整個車籠埔滿山的龍眼、荔枝，但像這些象徵太平農產特色的果樹，在種植與採收工作上都較危險，基於安全考量和因緣際會下，林育洲認識了在南部種植酪梨的前輩，因而踏上了種植酪梨的旅途，一路從見習小白走到行家。
+                <br /><br />
+                　　林育洲的酪梨田位在一個臺語叫做「北勢坑」的地方，是雙親父執輩的一塊土地，面積為一甲八分地，換算成坪數大約是3000坪左右，並以當地社區意向「貓頭鷹」來為果園命名。
+            </div>
+        </div>
+    </div>
+
+    <div style="background-color: #EEE; width: 100%;">
+        <div class="container-lg content-text">
+            <div class="row">
+                <div class="col-sm-9 col-12"
+                    style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                    　　酪梨相當怕水，因此在種植時需十分注重園區內的排水，幸運的是林先生的果園位於丘陵地，地勢較高，無需擔心排水問題，除非在採收時遭遇豪大雨，才會嚴重影響品質。<br /><br />
+
+                    　　而採摘下來的酪梨除了靠自己販賣外，也會配合著像是在當地的興農社區、在地青農農產品銷售等。
+                </div>
+                <div class="col-sm-3 col-12"
+                    style="display: flex; flex-direction:columN !important; justify-content: center;">
+                    <img src="resource/3.jpg" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-3 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/4.jpg" class="img-fluid">
+            </div>
+            <div class="col-sm-9 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                林育洲並沒有雇用任何員工，因此他只能利用假日時間和家人一同照顧農田。這樣的生活模式看似疲憊，但在林育洲眼裡，這是個一舉數得的休閒活動，既能增加許多親子互動的時間，也能在行銷過程中廣交各路朋友，小小的水果卻放大了世界！
+                <br /><br />
+                <div style="width: 100%; font-weight: bolder;">
+                    「那是他們的家，也是我們的根」—— 酪梨王子 林育洲先生
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">酪梨小筆記</span>
+        </div>
+    </div>
 
 
+    <div class="container-lg content-text">
+        <div class="card-group">
+            <div class="card">
+                <img src="resource/5.jpg" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">套袋</h5>
+                    <p class="card-text">
+                        <sprn style="font-weight: bolder;">酪梨嬌貴，成果後必須一一套袋</sprn><br />
+                        主因：<br />
+                        1.防止蟲類，例如：果實蠅、椿象等。<br />
+                        2.防止太陽光，因太陽光直射會造成果實外表不美觀，難以出售。
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="resource/6.jpg" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">排水</h5>
+                    <p class="card-text">酪梨相當怕水，若是遭遇豪大雨，讓根部泡水長達兩天以上，酪梨就有可能缺氧而死，嚴重影響品質。</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="resource/7.jpg" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">形狀</h5>
+                    <p class="card-text">
+                        如果授粉不完全，酪梨的外觀會形似小黃瓜。這樣的酪梨也是可以食用的，味道和口感並不會受到影響。<br /><br />
+                        尤其這類型沒有中間的果核，所以整顆都是可食用的果肉，價格也較一般酪梨貴。</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="resource/8.jpg" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">料理</h5>
+                    <p class="card-text">
+                        酪梨是一種百變的食材，它可以生吃、熱炒，做成醬料、奶昔，甚至在蛋糕、捲餅上也能看到它的身影。<br /><br />
+                        在麻豆、佳里、大內等產地，農會的家政班都會去開發酪梨的創意料理。</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                    aria-label="Slide 0"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="resource/9.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="resource/10.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="resource/11.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="resource/12.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="resource/13.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="resource/14.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 
     <div class="container">
         <div class="footer">
@@ -125,52 +298,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="resource/js/getbanner.js"></script>
 
     <script>
-        let pageTitle = $(document).attr("title");
-        $(document).ready(function () {
-            getBannerData();
-
-        });
-
-        function getBannerData() {
-            let dataUrl = "resource/banner.json";
-            $.ajax({
-                url: dataUrl,
-                type: 'GET',
-                dataType: 'json',
-                data: '',
-                async: true,
-                success: function (bannerData) {
-                    console.log("yes");
-                    console.log(bannerData);
-                    selectData(bannerData);
-                },
-                error: function () {
-                    console.log("no");
-                },
-            });
-        };
-
-        function selectData(bannerData) {
-            for (let i = 0; i < bannerData.length; i++) {
-                console.log("hi");
-                if (bannerData[i].title == pageTitle){
-                    $('.banner-title').text(bannerData[i].title);
-                    $('.banner-secondtitle').text(bannerData[i].secondtitle);
-                    $('.banner-article').text('文　' + bannerData[i].article);
-                    $('.banner-picture').text('圖　' + bannerData[i].picture);
-                    let imageUrl = bannerData[i].url;
-                    $('.banner-image').css('background-image', 'url(' + imageUrl + ')');
-                }
-            }
-        }
-
-
-
-
-
-
 
 
     </script>
