--- a/newsletter/page3.html
+++ b/newsletter/page3.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="resource/css/allpage.css">
     <link rel="stylesheet" href="resource/css/banner.css">
     <style>
-        
+        .content-text {
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
     </style>
 </head>
 
@@ -39,6 +42,8 @@
                                             首頁
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end">
+                                            <li><a href="index.html"><button class="dropdown-item"
+                                                        type="button">首頁</button></a></li>
                                             <li><a href="page1.html"><button class="dropdown-item"
                                                         type="button">建築工藝人-謝明標先生</button></a></li>
                                             <li><a href="page2.html"><button class="dropdown-item"
@@ -102,8 +107,103 @@
         </div>
     </div>
 
+    <div class="container-lg content-text">
+        　　一個豔陽高照的好日子，我們一群人裝備齊全、浩浩蕩蕩地從遊覽車下來，活像個典型的死觀光客，但其實，我們背負著實地探訪、文化調查的任務在身。
+    </div>
 
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">廣興宮前辨雌雄</span>
+        </div>
+    </div>
 
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　酪梨相當怕水，因此在種植時需十分注重園區內的排水，幸運的是林先生的果園位於丘陵地，地勢較高，無需擔心排水問題，除非在採收時遭遇豪大雨，才會嚴重影響品質。<br /><br />
+
+                　　而採摘下來的酪梨除了靠自己販賣外，也會配合著像是在當地的興農社區、在地青農農產品銷售等。
+            </div>
+            <div class="col-sm-4 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/15.jpg" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">追溯車籠埔</span>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-4 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/16.jpg" class="img-fluid">
+            </div>
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　我們隨著老師及興隆里長一同從小巷，開始窺探這裡的一切。里長邊漫步邊娓娓道出車籠埔三個字的來由：以前山上的原住民與漢人的接觸不多，所以當時的原住民還有「出草」的行為。每次有漢人被出草，就會在街道上留下遍地駭人的遺體，甚至數量多到需要用手推車來運送、處理，所以一開始得名——「車人埔」，意指車子運送人體到墓仔埔。可大家希望讓此地能夠從歷史的傷痛中走出來，因此將「人」改成臺語音近的「籠」。
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">樟樹奇談</span>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div style="width: 100%; margin-bottom: 30px;"><img src="resource/17.jpg" class="img-fluid"></div>
+        　　話說興隆里有顆樹齡過百年的老樟樹，關於它，里長提到一個頗具靈異色彩的故事……里長指著老樹下的兩棵小樟樹，面露感慨地說：「原本為了使老樟樹的養分不被分散，可以好好生長，想移除這兩棵小樟樹。但在砍樹前不久，我的手突然沒來由的痛了起來，完全找不到原因。而因緣際會下遇到的玄學老師一知曉我的狀況便問我：『最近是不是要砍樹？』我當下就嚇到了！因為要砍樹這事只有我和建設公司知道而已，我事後馬上取消了這項砍樹計畫……」<br /><br />
+
+        　　「想必是老樹在保護這兩位小朋友吧！」里長接著說。<br /><br />
+
+        　　「他們生長在這裡久了，已經產生感情嘍～你們就當聽故事就好，但這的確是我真實發生過的事情。」<br /><br />
+
+        　　當我們聽完這個故事，在覺得不可思議之餘，也不禁感嘆道，這或許就是萬物皆有靈的最佳應證吧！世上的靈異事件沒少發生，寧可信其有，不可信其無。這些樹木花草也都是活生生、美麗的生命啊！在場的我們，面對著這顆參天大樹，不由得肅然起敬了幾分。
+    </div>
+
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">破布子悖論</span>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　話途中，里長走到一棵樹樁旁，老師好奇的問里長這原本是什麼樹？里長表示里民因為直接採摘破布子的難度太大、容易黏手，都會將破布子樹砍倒後再摘取，砍倒後的木頭也不會浪費，能當作木材使用。<br /><br />
+
+                　　但老師認為，只因為圖自己方便就砍倒樹的作法並不妥當，便與里長爭論起來。在我們搜尋資料後發現，被農民砍倒的破布子樹其實不但並沒有死亡，狀態還會更勝於從前，原來樹樁的頹勢是為了將來更華麗的重生。
+            </div>
+            <div class="col-sm-4 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/18.png" class="img-fluid">
+            </div>
+
+            <div class="col-12">
+                　　半天的實地考察在轉眼間就結束了，在這短短幾小時內，我們認識了興隆里的地理環境、產業發展，了解了車籠埔的由來，也見識到了這裡豐富的自然生態資源，大家累得不成人形，也是這時的我們才知道，原來所有人之中，最有活力的那位是老師。
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg text-center">
+        <div class="video">
+            <div
+                style="position: relative !important; padding-bottom: 56.25% !important; height: 0px !important; overflow: hidden !important; max-width: 100% !important;">
+                <iframe src="https://www.youtube.com/embed/74WLlQZNuKY" frameborder="0" webkitallowfullscreen="true"
+                    mozallowfullscreen="true" allowfullscreen="true"
+                    allow="autoplay; fullscreen; clipboard-read; clipboard-write"
+                    style="position: absolute !important; top: 0px !important; left: 0px !important; width: 100% !important; height: 100% !important;"></iframe>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="footer">
@@ -125,51 +225,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <script src="resource/js/getbanner.js"></script>
     <script>
-        let pageTitle = $(document).attr("title");
-        $(document).ready(function () {
-            getBannerData();
-
-        });
-
-        function getBannerData() {
-            let dataUrl = "resource/banner.json";
-            $.ajax({
-                url: dataUrl,
-                type: 'GET',
-                dataType: 'json',
-                data: '',
-                async: true,
-                success: function (bannerData) {
-                    console.log("yes");
-                    console.log(bannerData);
-                    selectData(bannerData);
-                },
-                error: function () {
-                    console.log("no");
-                },
-            });
-        };
-
-        function selectData(bannerData) {
-            for (let i = 0; i < bannerData.length; i++) {
-                console.log("hi");
-                if (bannerData[i].title == pageTitle){
-                    $('.banner-title').text(bannerData[i].title);
-                    $('.banner-secondtitle').text(bannerData[i].secondtitle);
-                    $('.banner-article').text('文　' + bannerData[i].article);
-                    $('.banner-picture').text('圖　' + bannerData[i].picture);
-                    let imageUrl = bannerData[i].url;
-                    $('.banner-image').css('background-image', 'url(' + imageUrl + ')');
-                }
-            }
-        }
-
-
-
-
-
 
 
 
