--- a/newsletter/page4.html
+++ b/newsletter/page4.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="resource/css/allpage.css">
     <link rel="stylesheet" href="resource/css/banner.css">
     <style>
-        
+
     </style>
 </head>
 
@@ -39,6 +39,8 @@
                                             首頁
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end">
+                                            <li><a href="index.html"><button class="dropdown-item"
+                                                        type="button">首頁</button></a></li>
                                             <li><a href="page1.html"><button class="dropdown-item"
                                                         type="button">建築工藝人-謝明標先生</button></a></li>
                                             <li><a href="page2.html"><button class="dropdown-item"
@@ -102,8 +104,111 @@
         </div>
     </div>
 
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">守望相助</span>
+        </div>
+    </div>
 
+    <div class="container-lg content-text">
+        <div
+            style="font-size: 30px; font-weight: bolder; color: rgba(95,125,140,1); text-align: center; margin-bottom: 20px;">
+            有句話是這樣說的：助人為快樂之本</div>
+        　　在M型化越來越嚴重的當代台灣社會，有許多弱勢族群需要你我的一臂之力，讓他們擁有更多的關懷與協助，興隆里社區發展協會正是為發揚「人飢己飢、人溺己溺」的精神而成立的。
+    </div>
 
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　榮譽理事長一張朝宗先生，在正直壯年時期，太太便面臨需要洗腎的窘境，他不辭辛勞、每週三次從不間斷地陪太太去醫院接受治療。在這段期間，他看見隔壁急診室的病人家屬因為一週要洗腎多次，便決定放棄對家人的治療，令他感到十分不捨又心寒！
+            </div>
+            <div class="col-sm-4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/19.jpg" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/20.jpg" class="img-fluid">
+            </div>
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　在步入高齡化社會的今天，我們看到人們在寵物生病時，會不厭其煩的親自帶寵物去醫院治療、住院，但對於拉拔自己長大的父母，卻選擇棄之不顧。這樣的現象，也讓張理事長意識到對於社區發展協會的老人服務部分需要投注更多心力。除此之外，興隆里社區發展協會也關注身心障礙、隔代教養兒童的照顧，只要是需要幫助的，都是他們服務的對象。
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">萬事起頭難</span>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        　　對比於今日長者們習慣天天在固定時間移動至社區協會參與各種活動與課程、人氣興旺的狀況，張先生無奈表示，這個協會的成立並不簡單。<br /><br />
+
+        　　起初，政府只是意識到里民互助的重要性，鼓勵各地方成立社區發展協會；但並沒有具體的策略方向與發展內容，也難以提供實質的幫助。
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/21.jpg" class="img-fluid">
+            </div>
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　幹部們的工作十分繁重，可說是沒錢苦、有錢也累！沒錢要寫企劃、申請經費；有錢辦事後，則要寫結案報告，還要配合政府複雜的核銷規定，一張一張單據逐筆進行核銷。如此繁雜的工作讓志工的角色變得更為重要，也讓他們意識到人員的缺乏，反而因此更積極的把社區發展做起來。
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　現在的社區發展協會除了一般的體適能、手作、歌唱等等課程外，還成為身心障礙和長者的關懷據點。從今年三月開始一週開放五天，專門為長者開設幾堂延緩失能的課程，有專業的復健師來帶領年長者做復健，幫助長輩提升頭腦機能，也定期幫長者們做健康宣導和身體檢查。也就是說，興隆里社區發展協會經過多年的努力，在各屆理事長的努力經營之下，他們是以身心靈全方位的經營來關心里民長者的。
+            </div>
+            <div class="col-sm-4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/22.jpg" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fulid">
+        <div class="content-title-background">
+            <span class="content-title-text">度沽不孤獨</span>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/23.jpg" class="img-fluid">
+            </div>
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　張榮譽理事長語重心長的說：「年長者長期獨自在家，沒有人陪伴也沒有人搭理，時間久了，自然變得憂鬱或者脾氣古怪，也會造成家庭矛盾。在這樣多重心理壓力下，就有年長者想不開。」想必理事長肯定是看過許多案例，而這樣的結果肯定不是大家樂見的，這就是協會存在的重要性。這位永遠的志工常常這樣鼓勵長者們：「來這邊就多活一年，就可以幫家裡省下醫療費！別獨自待在家！」
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg content-text">
+        <div class="row">
+            <div class="col-sm-8 col-12"
+                style="display: flex; flex-direction:columN !important; justify-content: center; padding: 20px 0;">
+                　　在社區發展協會，有人陪你聊天、分享日常、一起運動、一起健康。我們看見這些無償的援助都是社區發展協會裡的眾多志工們結合政府的力量，日覆一日、無怨無悔的付出。<br /><br />
+
+                　　這一份把別人家的父母當自家老人看待的心意，促成這個位處山邊、以農業為主的小小聚落，綿延傳遞古人｢里仁為美」的精神！
+            </div>
+            <div class="col-sm=4 col-12" style="display: flex; flex-direction:columN !important; justify-content: center;">
+                <img src="resource/24.jpg" class="img-fluid">
+                <img src="resource/25.jpg" class="img-fluid">
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="footer">
@@ -125,47 +230,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="resource/js/getbanner.js"></script>
 
     <script>
-        let pageTitle = $(document).attr("title");
-        $(document).ready(function () {
-            getBannerData();
-
-        });
-
-        function getBannerData() {
-            let dataUrl = "resource/banner.json";
-            $.ajax({
-                url: dataUrl,
-                type: 'GET',
-                dataType: 'json',
-                data: '',
-                async: true,
-                success: function (bannerData) {
-                    console.log("yes");
-                    console.log(bannerData);
-                    selectData(bannerData);
-                },
-                error: function () {
-                    console.log("no");
-                },
-            });
-        };
-
-        function selectData(bannerData) {
-            for (let i = 0; i < bannerData.length; i++) {
-                console.log("hi");
-                if (bannerData[i].title == pageTitle){
-                    $('.banner-title').text(bannerData[i].title);
-                    $('.banner-secondtitle').text(bannerData[i].secondtitle);
-                    $('.banner-article').text('文　' + bannerData[i].article);
-                    $('.banner-picture').text('圖　' + bannerData[i].picture);
-                    let imageUrl = bannerData[i].url;
-                    $('.banner-image').css('background-image', 'url(' + imageUrl + ')');
-                }
-            }
-        }
-
 
 
 
